--- a/Projeto/upload_service/Dockerfile
+++ b/Projeto/upload_service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9-slim
+FROM python
 
 WORKDIR /app
 
@@ -6,6 +6,6 @@ COPY . /app
 
 RUN pip install -r requirements.txt
 
-EXPOSE 5000
+EXPOSE 7000
 
 CMD ["python","app.py"]
