--- a/Projeto/catalogservice/Dockerfile
+++ b/Projeto/catalogservice/Dockerfile
@@ -2,14 +2,10 @@ FROM python
 
 WORKDIR /app
 
-COPY catalogservice/main.py .
+COPY main.py .
 
-COPY catalogservice/requirements.txt .
-
-COPY shared/ ./shared/
-
-RUN pip install -r requirements.txt
+RUN pip install flask flask-cors pymongo
 
 EXPOSE 5000
 
-CMD ["python","app.py"]
+CMD ["python","main.py"]
