--- a/Projeto/streamingservice-service.yaml
+++ b/Projeto/streamingservice-service.yaml
@@ -13,6 +13,6 @@ spec:
     targetPort: 6000
   selector:
     app: streamingservice
-  type: ClusterIP
+  type: NodePort
 status:
   loadBalancer: {}
