--- a/Projeto/frontend/Dockerfile
+++ b/Projeto/frontend/Dockerfile
@@ -4,3 +4,5 @@ COPY index.html /usr/share/nginx/html/index.html
 
 COPY admin.html /usr/share/nginx/html/admin.html
 
+COPY stream.html /usr/share/nginx/html/stream.html
+
